Patched in global variable rework - player-global variables - also fixed some Y min/max height checks